@@ -1,21 +1,0 @@
-# $NetBSD: Makefile,v 1.5 2012/10/29 05:07:20 asau Exp $
-#
-
-DISTNAME=		xsetmode-1.0.0
-CATEGORIES=		x11
-MASTER_SITES=		${MASTER_SITE_XORG:=app/}
-EXTRACT_SUFX=		.tar.bz2
-
-MAINTAINER=		joerg@NetBSD.org
-HOMEPAGE=		http://xorg.freedesktop.org/
-COMMENT=		Switch mode of XInput devices
-
-GNU_CONFIGURE=		yes
-USE_TOOLS+=		pkg-config
-
-CONFIGURE_ENV+=		APP_MAN_SUFFIX=1
-
-.include "../../x11/libXext/buildlink3.mk"
-.include "../../x11/libXi/buildlink3.mk"
-
-.include "../../mk/bsd.pkg.mk"
